Refactor DEFCON logic and UI representation
- Updated DEFCON level calculations to reflect a reversed scale (1-5 to 5-1).
- Adjusted the highest DEFCON retrieval method to return 5 when no emails are present.
- Modified global status icon and text conditions to align with the new DEFCON logic.
- Changed age badge and icon logic to display critical status for lower DEFCON levels.
- Added a new n8n workflow file.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="defcon-bar">
                 <div v-for="level in 5" :key="level"
                      class="defcon-segment"
-                     :class="['defcon-' + level, { active: level <= highestDefcon, selected: filterDefcon === level }]"
+                     :class="['defcon-' + level, { active: level <= (6 - highestDefcon), selected: filterDefcon === level }]"
                      @click="toggleDefconFilter(level)">
                     <span class="segment-label">{{ level }}</span>
                 </div>
